task28 + task27 (for tg bot)